<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.philipgo.servodoorlock.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/locked_icon"
        android:layout_marginBottom="248dp"
        android:layout_above="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:adjustViewBounds="false"
        android:id="@+id/lock_state_img"
        android:contentDescription="@string/todo"
        tools:ignore="RtlHardcoded,UnknownId" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock_state_locked"
        android:layout_marginBottom="179dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/lock_state_text" />

    <Button
        android:text="@string/connect_to_bluetooth_module"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bluetooth_connect_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp" />

    <Button
        android:text="@string/lock_unlock_door"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bluetooth_connect_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:id="@+id/lock_state_btn" />

    <Button
        android:id="@+id/btn_change_exit"
        android:text="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bluetooth_connect_btn"
        android:layout_centerInParent="true"
        android:layout_marginBottom="65dp"
        android:onClick="openAuthActivity" />


</RelativeLayout>
